[package]
name = "grab"
version = "0.3.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

description = "Easily grab user input to your CLI"
repository = "https://github.com/bazaah/grab-rs"
license = "Apache-2.0"

keywords = ["CLI", "input", "parse"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"
bitflags = "1.2"

[dev-dependencies]
structopt = "0.3"
